--- a/main.css
+++ b/main.css
@@ -184,7 +184,7 @@ main {
   background-color: #ffffff;
   justify-content: center; /* align horizontal */
   align-items: center; /* align vertical */
-  padding: 7vh 10vw 7vh 10vw !important;
+  padding: 7vh 10vw 7vh 10vw;
   width: 100%;
 }
 
